--- a/APP/users/templates/users/profile.html
+++ b/APP/users/templates/users/profile.html
@@ -3,19 +3,14 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-
-
-  <div class="media raper">
-    <img class="rounded-circle media-left" src="{{ user.profile.image.url }}">
-    <div class="media-body">
-      <h1 class="mt-0">{{ user.username }}</h1>
-    </div>
-  </div>
-
       <form method="POST" enctype="multipart/form-data" class="raper">
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Ваш профиль</legend>
+            <div class="media raper">
+              <img class="rounded-circle media-left" src="{{ user.profile.image.url }}" width="200px" height="200px">
+            </div>
+            <br>
             {{ u_form|crispy }}<br>
             {{ p_form|crispy }}
         </fieldset>
