--- a/APP/exort/templates/exort/base.html
+++ b/APP/exort/templates/exort/base.html
@@ -28,7 +28,7 @@
           </ul>
           <ul class="nav">
             {% if user.is_authenticated %}
-            <li class="nav-item"><a href="{% url 'profile' %}" class="nav-link link-dark px-2">Вы вошли под пользователем {{ us }}</a></li>
+            <li class="nav-item"><a href="{% url 'profile' %}" class="nav-link link-dark px-2">Вы вошли под пользователем {{ user }}</a></li>
             <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link link-dark px-2">Выход</a></li>
             {% else %}
             <li class="nav-item"><a href="{% url 'login' %}" class="nav-link link-dark px-2">Вход</a></li>
